--- a/Projects/guessthesong/css/styles.css
+++ b/Projects/guessthesong/css/styles.css
@@ -81,7 +81,7 @@ h1 {
 
 .maincontainer {
     width: 1500px;
-    height: auto;
+    height: 800px;
     background-color: hsla(0, 0%, 10%, 0.1);
     border: 2px solid var(--white-color);
     border-radius: 1rem;
@@ -140,10 +140,76 @@ h1 {
         box-shadow: 0em 0em 0em 0.3em hsla(250,100%,75%,0);
     }
 }
+/* Skip btn */
+
+.skipBtn {
+    border-radius: 5px;
+    font-weight: bold;
+    font-size: 21px;
+    background: white;
+    border: 2px solid black;
+    width: 200px;
+    height: 50px;
+    position: relative;
+    right: 250px;
+    top: 40px;
+}
+.skipBtn::before {
+    content: "";
+    display: inline-block;
+}
+.skipBtn:hover {
+    background: #FF1879;
+}
 
 .input-container {
     display: inline-block;
     margin-top: -60px;
+}
+
+.pulse-animation_skip {
+    animation: pulse2 0.85s ease;
+}
+@keyframes pulse2 {
+    0% {
+        box-shadow: 0em 0em 0em 0em #FF1879;
+    }
+    100% {
+        box-shadow: 0em 0em 0em 1.50em hsla(250,100%,75%,0);
+    }
+}
+
+/* Submit Button */
+
+.submitBtn {
+    border-radius: 5px;
+    font-weight: bold;
+    font-size: 21px;
+    background: white;
+    border: 2px solid black;
+    width: 200px;
+    height: 50px;
+    position: relative;
+    left: 250px;
+    top: 40px;
+}
+.submitBtn::before {
+    content: "";
+    display: inline-block;
+}
+.submitBtn:hover {
+    background: #04AA6D;
+}
+.pulse-animation_submit {
+    animation: pulse3 0.85s ease;
+}
+@keyframes pulse3 {
+    0% {
+        box-shadow: 0em 0em 0em 0em #04AA6D;
+    }
+    100% {
+        box-shadow: 0em 0em 0em 1.50em hsla(250,100%,75%,0);
+    }
 }
 
 #guess {
